# xfce4-settings

./: .gitignore  Makefile.am  NEWS  TODO  configure.ac.in
blade-settings-editor/: Makefile.am  blade-settings-cell-renderer.c  blade-settings-cell-renderer.h  blade-settings-editor-box.c  blade-settings-editor-box.h  blade-settings-editor.desktop.in  blade-settings-prop-dialog.c  blade-settings-prop-dialog.h  main.c
blade-settings-manager/: Makefile.am  blade-settings-manager-dialog.c  blade-settings-manager-dialog.h  blade-settings-manager.desktop.in  blade-settings-manager.menu  main.c  xfce-text-renderer.c
blsettingsd/: Makefile.am  accessibility.c  blsettingsd.desktop.in  debug.c  debug.h  displays-upower.c  displays.c  gtk-decorations.c  keyboard-layout.c  keyboard-shortcuts.c  keyboards.c  main.c  pointers.c  workspaces.c  xsettings.c
dialogs/accessibility-settings/: Makefile.am  accessibility-dialog.glade  find-cursor.c  main.c
dialogs/appearance-settings/: Makefile.am  appearance-dialog.glade  main.c
dialogs/display-settings/: Makefile.am  display-dialog.glade  display-name.c  main.c  xfce-randr.c  xfce-randr.h
dialogs/keyboard-settings/: Makefile.am  command-dialog.c  keyboard-dialog.glade  main.c  xfce-keyboard-settings.c
dialogs/mime-settings/: Makefile.am  main.c  xfce-mime-chooser.c  xfce-mime-window.c
dialogs/mouse-settings/: Makefile.am  main.c  mouse-dialog.glade
po/: POTFILES.in  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+14 more)
